# little-bits

cl_wrapper/: Cargo.toml
cl_wrapper/src/: helpers.rs
game/: Cargo.toml  imgui.ini
game/assets/: box.fbx  monkey.fbx  monkey.gltf
game/assets/cl/: bake.cl  common.cl  march.cl  multi_hash_grid.cl  nn.cl  nn2.cl  rand.cl
game/assets/shaders/: bake_frag.glsl  frag.glsl  quad_frag.glsl  quad_vert.glsl  vert.glsl
game/assets/wooden_chair/: wooden_chair.fbx
game/src/: main.rs
gl_wrapper/: Cargo.toml
gl_wrapper/src/: buffers.rs  imgui_impl.rs  lib.rs  shaders.rs  textures.rs
gmaths/: Cargo.toml
gmaths/src/: lib.rs  mat.rs  quat.rs  traits.rs  transform.rs  vec.rs  vec_macros.rs
little_bits/: Cargo.toml
little_bits/benches/: vec.rs
little_bits/src/: application.rs  lib.rs  system.rs
little_bits/src/common/: handle_queue.rs  shared.rs
little_bits/src/graphics/: camera.rs  graphics.rs  nn.rs
little_bits/src/graphics/opencl/: helpers.rs  opencl.rs
little_bits/src/graphics/opengl/: debug_ui.rs  helpers.rs  material.rs  mesh.rs  model.rs  opengl.rs  render_target.rs  render_texture.rs  texture2D.rs
little_bits/src/input/: input.rs  input_codes.rs
little_bits/src/maths/: maths.rs  traits.rs
little_bits/src/maths/mat/: mat.rs
little_bits/src/maths/quat/: quat.rs
little_bits/src/maths/transform/: transform.rs
little_bits/src/maths/vec/: vec.rs  vec_macros.rs
little_bits/src/resources/: image.rs  model.rs  resource_manager.rs  resources.rs
