[package]
name = "game"
authors = ["Jason de Wolff"]
version = "0.1.0"
edition = "2021"

[dependencies]
little-bits = { path = "../little_bits" }

[build]
jobs = -1                               # number of parallel jobs, defaults to # of CPUs
rustc = "rustc"                         # the rust compiler tool
rustdoc = "rustdoc"                     # the doc generator tool
target-dir = "target"                   # path of where to place all generated artifacts
rustflags = ["target-cpu=native"]       # custom flags to pass to all compiler invocations
incremental = true                      # whether or not to enable incremental compilation

[profile.dev]                           # Modify profile settings via config.
opt-level = 0                           # Optimization level.
debug = true                            # Include debug info.
debug-assertions = true                 # Enables debug assertions.
overflow-checks = true                  # Enables runtime integer overflow checks.
lto = false                             # Sets link-time optimization.
panic = 'unwind'                        # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 16                      # Number of code generation units.
rpath = false                           # Sets the rpath linking option.

[profile.release]                       # Modify profile settings via config.
opt-level = 3                           # Optimization level.
debug = false                           # Include debug info.
debug-assertions = false                # Enables debug assertions.
overflow-checks = false                 # Enables runtime integer overflow checks.
lto = true                              # Sets link-time optimization.
panic = 'abort'                         # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 1                       # Number of code generation units.
rpath = false                           # Sets the rpath linking option.