###############################################################################
#                                   GENERAL
###############################################################################

[package]
name = "little-bits"
authors = ["Jason de Wolff"]
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.3.*"
num  = "0.1.*"
memoffset = "0.8"
glfw = "0.48.0"
gl = "0.14.0"
stb_image = "0.2.4"
opencl3 = "0.9.2"
gltf = "1.0.0"

###############################################################################
#                               BUILD SETTINGS
###############################################################################

[lib]
name = "little_bits"
path = "src/lib.rs"

[profile.dev]                           # Modify profile settings via config.
opt-level = 0                           # Optimization level.
debug = true                            # Include debug info.
debug-assertions = true                 # Enables debug assertions.
overflow-checks = true                  # Enables runtime integer overflow checks.
lto = false                             # Sets link-time optimization.
panic = 'unwind'                        # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 16                      # Number of code generation units.
rpath = false                           # Sets the rpath linking option.

[profile.release]                       # Modify profile settings via config.
opt-level = 3                           # Optimization level.
debug = false                           # Include debug info.
debug-assertions = false                # Enables debug assertions.
overflow-checks = false                 # Enables runtime integer overflow checks.
lto = true                              # Sets link-time optimization.
panic = 'abort'                         # The panic strategy.
incremental = true                      # Incremental compilation.
codegen-units = 1                       # Number of code generation units.
rpath = false                           # Sets the rpath linking option.